<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/txtInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10sp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <com.hbb20.CountryCodePicker
                android:id="@+id/ccp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:ccp_autoDetectCountry="true"
                app:ccp_showFlag="false"
                app:ccp_showNameCode="false" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edtTxt_PhoneNum"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/phoneNumber"
                app:boxStrokeColor="@color/theme_colorR"
                app:hintTextColor="@color/theme_colorR">

                <com.google.android.material.textfield.TextInputEditText

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="10dp"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTxt_Password"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/password"
            app:boxStrokeColor="@color/theme_colorR"
            app:hintTextColor="@color/theme_colorR"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/theme_colorR"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon"
                android:drawableTint="@color/theme_colorR"
                android:drawablePadding="10sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtTxt_ConfirmPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:hint="@string/confirmPassword"
            app:boxStrokeColor="@color/theme_colorR"
            app:hintTextColor="@color/theme_colorR"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/theme_colorR"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:drawableStart="@drawable/password_icon"
                android:drawableTint="@color/theme_colorR"
                android:drawablePadding="10sp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_signUp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50sp"
            android:layout_marginEnd="50sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="5sp"
            android:text="@string/sign_up"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            android:textSize="18sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:letterSpacing="0.1"
        android:text="Or"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="10sp"/>

    <LinearLayout
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/img_google"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/google_icon"
            android:layout_marginEnd="25sp"
            />
        <ImageView
            android:id="@+id/img_facebook"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/facebook_icon"
            android:layout_marginEnd="25sp"
            android:tint="#03A9F4"
            />

        <ImageView
            android:id="@+id/img_github"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/github_icon"
            />



    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10sp"
        android:layout_gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/tv_signIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textSize="20sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/pgBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:indeterminateTint="@color/theme_colorR"
        android:visibility="invisible"/>




</LinearLayout>